# rummikub-game

./: .dockerignore  Dockerfile  README.md  RUMMIKUB_RULES.md  TODO.md  conftest.py  docker-compose.app.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml
doc/: API.md  ARCHITECTURE.md  BUGFIX_UI_REFRESH.md  DEPLOYMENT.md  ENGINE.md  HOME_PAGE_REDESIGN.md  MODELS.md  SERVICE.md  TESTING.md  UI.md
scripts/: pyrun.sh
src/rummikub/: __init__.py
src/rummikub/api/: __init__.py  dependencies.py  exception_handlers.py  main.py  models.py
src/rummikub/engine/: __init__.py  game_actions.py  game_engine.py  game_rules.py
src/rummikub/models/: __init__.py  actions.py  base.py  (+6 more)
static/css/: game.css  main.css
static/js/: create.js  game.js  home.js  i18n.js  join.js  main.js  win.js
static/pages/: create.html  game.html  home.html  join.html  win.html
tests/api/: api_endpoints_tests.py  auth_and_lang_tests.py  game_name_tests.py
tests/engine/: empty_move_validation_tests.py  game_actions_tests.py  game_engine_tests.py  game_rules_tests.py  meld_validation_fix_tests.py
tests/models/: deterministic_meld_tests.py  initialization_tests.py  integration_tests.py  joker_run_validation_fix_tests.py  model_validation_tests.py  name_generator_tests.py  test_initialization.py  test_model_validation.py  test_validators.py  tile_utils_tests.py  updated_model_validation_tests.py
tests/service/: __init__.py  game_service_tests.py  game_simulation_tests.py
(+11 files in other folders)
