[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rummikub-game"
version = "0.1.0"
description = "Rummikub game with Redis backend, FastAPI API, and pytest tests"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Project Authors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",  # Still needed for FastAPI request/response validation
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis>=4.6.0.20240819",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = false
